@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-18T08:09:19Z",
-  "count" : 13,
+  "timestamp" : "2022-06-18T16:09:11Z",
+  "count" : 11,
   "count_minmax" : [ 2, 16 ],
-  "count_decinc" : [ -3, +16 ],
-  "uniques" : 3,
+  "count_decinc" : [ -5, +16 ],
+  "uniques" : 2,
   "uniques_minmax" : [ 1, 3 ],
-  "uniques_decinc" : [ -0, +3 ]
+  "uniques_decinc" : [ -1, +3 ]
 }
