@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-06-18T08:09:19Z",
+  "timestamp" : "2022-06-18T16:09:11Z",
   "count_outdated" : 1624,
   "uniques_outdated" : 95,
-  "count" : 1676,
-  "uniques" : 104,
+  "count" : 1674,
+  "uniques" : 103,
   "views" : [
     {
       "timestamp": "2022-06-04T00:00:00Z",
-      "count": 13,
+      "count": 11,
       "count_minmax": [ 2, 16 ],
-      "uniques": 3,
+      "uniques": 2,
       "uniques_minmax": [ 1, 3 ]
     },
     {
