@@ -1,11 +1,11 @@
 {
-  "count": 52,
-  "uniques": 3,
+  "count": 50,
+  "uniques": 2,
   "views": [
     {
       "timestamp": "2022-06-04T00:00:00Z",
-      "count": 13,
-      "uniques": 3
+      "count": 11,
+      "uniques": 2
     },
     {
       "timestamp": "2022-06-05T00:00:00Z",
